<resources>
    <string name="app_name">GreenKamchatka</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Регистрация</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="name">Имя</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="saved">Сохранить</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="sign_in">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="email">E-mail</string>
    <string name="confirm_password">Повторить пароль</string>
    <string name="no_account">У вас нет аккаунта?</string>
    <string name="has_account">У вас есть аккаунт?</string>
    <string name="collect_trash">Собирай мусор</string>
    <string name="hoard_coins">Копи экокоинты</string>
    <string name="parks">Парки</string>
    <string name="trails">Тропы</string>
    <string name="profile">Личный кабинет</string>
    <string name="chat">Обратная связь</string>
    <string name="report">Сообщить о проблеме</string>
    <string name="attach_photo">Прикрепить фото</string>
    <string name="send">Отправить</string>
    <string name="personal_data">Личные Данные</string>
    <string name="phone">Телефон</string>
    <string name="nickname">Никнейм</string>
    <string name="confirmation_code">Код подтверждения</string>
    <string name="rewards">Достижения</string>
    <string name="my_tickets">Мои билеты</string>
    <string name="cancel">Отменить</string>
    <string name="text">Но базовый вектор развития не даёт нам иного выбора, кроме определения анализа существующих паттернов поведения. Современные технологии достигли такого уровня, что перспективное планирование однозначно определяет каждого участника как способного принимать собственные решения касаемо модели развития. Мы вынуждены отталкиваться от того, что современная методология разработки способствует подготовке и реализации стандартных подходов.</string>
    <string name="reviewrs">Был возле источника родниковой воды на тропе “Центральный”, всё хорошо, белки довольны, воздух чистый.</string>
    <string name="choose_source">Выберите источник</string>
    <string name="gallery">Галерея</string>
    <string name="camera">Камера</string>
    <string name="input_text">Введите текст...</string>
    <string name="become_volunteer">Стать волонтёром</string>
    <string name="date_complete">Дата прохождения</string>
    <string name="count_people">Количество человек</string>
    <string name="passport_number">Номер паспорта</string>
    <string name="when_issued">Когда выдан</string>
    <string name="passport_series">Серия паспорта</string>
    <string name="whom">Кем</string>
    <string name="where">Где</string>
    <string name="car_number">Номер автомобиля</string>
    <string name="book">Забронировать</string>
    <string name="phone_number">Телефон</string>
    <string name="recover">Восстановить</string>
</resources>